# SliceIntersection

./: CMakeLists.txt  IntersectionControls.py
IntersectionControls/: CMakeLists.txt  IntersectionControls.py
IntersectionControls/Resources/UI/: IntersectionControls.ui
